--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "TASTER"
 description: "Training Attention Switching for Temper Episode Reduction"
 
-url: "http://nrobb.github.io/TASTER_site/"
+url: "http://nrobb.github.io/TASTER_site"
 
 paginate: 10
 
